Switch DEBUG to True

--- a/.env.dist
+++ b/.env.dist
@@ -2,7 +2,7 @@
 # Quotation marks should be used only as necessary, such as when dealing with complex strings that contain special characters and such.
 
 # * DEBUG should be False if project is used in production
-DEBUG=False
+DEBUG=True
 SECRET_KEY='secret_key' # * Your secret key's value should remain wrapped in quotes
 DB_NAME=your_postgres_db_name # TODO - CHANGE ME!!
 USERNAME=postgres
